# modelplane

./: .gitignore  CONTRIBUTING.md  README.md  crossplane-project.yaml  flake.nix  nic-1on1.md  nix.sh  pyproject.toml  upbound.yaml
cli/: pyproject.toml
cli/src/mp/: config.py  kube.py  main.py  output.py  resources.py
cli/src/mp/commands/: delete.py  deploy.py  deployments.py  envs.py  init.py  logs.py  models.py  predict.py  status.py
context/: baseten-inference-platform.md  bassam-apis-sketches.md  crossplane-v2-deep-dive.md  function-design-principles.md  gke-kserve-composition.md  k8s-inference-landscape.md  kserve-gke-validation.md  modelplane-positioning-v2.md  modelplane-strategy.md  saas-inference-landscape.md  unified-endpoint-routing.md  upbound-strat.md
demo/: DEMO.md  RECORDING.md  cleanup.sh  deploy.sh  infra-down.sh  infra-up.sh  meeting-coding-agents.docx  meeting-coding-agents.html  meeting-coding-agents.md  meeting-self-hosted-coding.docx  meeting-self-hosted-coding.html  meeting-self-hosted-coding.md  model-deployment.yaml  predemo.sh  setup.sh
design/: api-update.md  cli-design.md  design.md  disaggregation-routing-phase2-decisions.md  disaggregation-routing-spike-phase2.md  disaggregation-routing-spike.md  disaggregation.md  intent-based-deployment.md  modelplane-api.md  mvp-build-log.md  mvp-spec.md  scheduler-1pager.md  unopinionated-deployments.md  web-ui.md
docs/: Makefile  build.py  cli.html  concepts.md  getting-started.md  hugo.toml  package-lock.json  package.json  pull-secret.yaml  vercel-build.sh
lib/: conditions.py  defaults.py  (+9 more)
(+523 files in other folders)
