[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelplane-cli"
version = "0.1.0"
description = "CLI for Modelplane — deploy and manage AI model inference"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "kubernetes>=31.0",
    "httpx>=0.27",
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.scripts]
mp = "mp.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mp"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
